crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_all_special_characters-2.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 204
expression: "escape(special_chars, \"powershell\")"
---
'!@#$%^&*()_+-={}[]:";''<>?,./\|`~'
