crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_all_special_characters-3.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 205
expression: "escape(special_chars, \"fish\")"
---
'!@#$%^&*()_+-={}[]:";\'<>?,./\\|`~'
