crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_all_special_characters.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 203
expression: "escape(special_chars, \"bash\")"
---
$'!@#$%^&*()_\x2B\x2D={}[]:";\'<>?,.\x2F\|`~'
