crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_newline-2.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 182
expression: "escape(\"line1\\nline2\", \"powershell\")"
---
'line1`
line2'
