crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_newline-3.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 183
expression: "escape(\"line1\\nline2\", \"fish\")"
---
'line1\
line2'
