crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_newline.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 181
expression: "escape(\"line1\\nline2\", \"bash\")"
---
$'line1\
line2'
