crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_special_and_whitespace.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 226
expression: "escape(special_whitespace, \"bash\")"
---
$' $ \	 \
 @ !'
