crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_tab-2.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 189
expression: "escape(\"column1\\tcolumn2\", \"powershell\")"
---
'column1`	column2'
