crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_tab-3.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 190
expression: "escape(\"column1\\tcolumn2\", \"fish\")"
---
'column1\	column2'
