crates/shell/src/utils/snapshots/starbase_shell__utils__escape__tests__escape_string_with_tab.snap
---
source: crates/shell/src/utils/escape.rs
assertion_line: 188
expression: "escape(\"column1\\tcolumn2\", \"bash\")"
---
$'column1\	column2'
